# hierarchical-reasoning-model

./: .gitignore  CLAUDE.md  README.md  demo.py  main.py  pyproject.toml  test_hrm.py  visual_demo.py
analysis/: convergence.py  visualization.py
datasets/: sudoku.py
docs/: paper-info.yaml
experiments/: sudoku_demo_simple.py  sudoku_reasoning_demo.py  train_sudoku.py  train_sudoku_cpu.py
experiments/sudoku_cpu_20250723_142702/: config.json  final_results.json
models/: components.py  hrm.py
training/: gradient.py
